--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/rss": "^1.0.0",
     "@astrojs/sitemap": "^1.0.0",
     "astro": "^1.0.6",
+    "prettier": "^2.7.1",
+    "prettier-plugin-astro": "^0.5.0",
     "rollup": "^2.78.1"
   }
 }
